fix: update editor count in statistics and enhance footer icon size for better visibility

--- a/root/static/styles/homepage.less
+++ b/root/static/styles/homepage.less
@@ -1336,6 +1336,7 @@
 				p {
 					color: @musicbrainz-orange;
 					margin-bottom: 0;
+					font-weight: 700;
 				}
 			}
 
